# TestTask

./: CMakeLists.txt  README.txt  generate.bat
src/: console.cpp  rgbd_viewer.cpp  rgbd_viewer.h
